1: version del frontend aplicacion tienda virtual de ´productos para mascotas

--- a/src/app/plantilla/pie-pagina/pie-pagina.component.html
+++ b/src/app/plantilla/pie-pagina/pie-pagina.component.html
@@ -2,8 +2,8 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Footer Content</h5>
-          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          <h5 class="white-text">Quines somos</h5>
+          <p class="grey-text text-lighten-4">Esta es una Plataforma Online dedicada a la venta articulos y productos caninos.</p>
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Links</h5>
@@ -18,7 +18,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2014 Copyright Text
+      © Elaborado por grupo TeamNodejs_Mision TIC 2022 Copyright 
       <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
       </div>
     </div>
