--- a/src/app/modulos/administracion/productos/buscar-producto/buscar-producto.component.html
+++ b/src/app/modulos/administracion/productos/buscar-producto/buscar-producto.component.html
@@ -1,1 +1,48 @@
-<p>buscar-producto works!</p>
+<a routerLink="/administracion/crear-producto" class="btn">Nuevo Producto</a>
+
+<table class="table responsive">
+    <thead>
+        <tr>
+            <th>
+                Nombre
+            </th>
+            <th>
+                Descripcion
+            </th>
+            <th>
+                precioVenta
+            </th>
+            <th>
+                stock
+            </th>
+            <th>
+                imagen
+            </th>
+            <th>
+                Editar
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let p of listadoRegistros">
+            <td>
+                {{p.nombre}}
+            </td>
+            <td>
+                {{p.descripcion}}
+            </td>
+            <td>
+                {{p.precioVenta}}
+            </td>
+            <td>
+                {{p.stock}}
+            </td>
+            <td>
+                <img src="{{p.imagen}}" class="imagenProducto" />
+            </td>
+            <td>
+                <a routerLink="/administracion/editar-producto/{{p.id}}" class="btn">Editar Producto</a>
+            </td>
+        </tr>
+    </tbody>
+</table>
