--- a/src/app/modulos/administracion/productos/crear-producto/crear-producto.component.html
+++ b/src/app/modulos/administracion/productos/crear-producto/crear-producto.component.html
@@ -1,1 +1,36 @@
-<p>crear-producto works!</p>
+<div class="row">
+    <h3 class="center-align">Crear Productos</h3>
+    <article class="col s6 offset-s3">
+        <form [formGroup]="fgValidador" (ngSubmit)="GuardarProducto()" method="POST" action="formulario-contacto.php">
+            <div class="input-field">
+                <label for="nombre">Nombre</label>
+                <input formControlName="nombre" type="text" name="nombre" required>
+            </div>
+            <div class="input-field">
+                <label for="descripcion">Descripcion</label>
+                <input formControlName="descripcion" type="text" name="descripcion" required>
+            </div>
+
+            <div class="input-field">
+                <label for="precioVenta">precioVenta</label>
+                <input formControlName="precioVenta" type="text" name="precioVenta" required>
+            </div>
+            <div class="input-field">
+                <label for="stock">stock</label>
+                <input formControlName="stock" type="text" name="stock" required>
+            </div>
+
+            <div class="input-field">
+                <label for="imagen">Imagen</label>
+                <input formControlName="imagen" type="text" name="imagen" required>
+            </div>
+
+            <p class="center-align">
+                <button [disabled]="!fgValidador.valid" class="waves-effect waves-light btn" type="submit"><i
+                        class="material-icons right">send</i>Enviar</button>
+            </p>
+
+        </form>
+
+    </article>
+</div>
