--- a/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
@@ -1,19 +1,24 @@
 <nav>
     <div class="nav-wrapper">
-      <a routerLink="/inicio" class="brand-logo">Logo</a>
+      <a routerLink="/inicio" class="brand-logo">TeamNodeJS</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a routerLink="/administracion/usuarios">Usuarios</a></li>
-        <li><a routerLink="/administracion/productos">Productos</a></li>
-        <li><a routerLink="/seguridad/cambioClave">Cambiar Clave</a></li>
-        <li><a routerLink="/seguridad/identificar"> Inicar Sesion</a></li>
+        <li *ngIf="seInicioSesion"><a routerLink="/administracion/usuarios">Usuarios</a></li>
+        <li *ngIf="seInicioSesion"><a routerLink="/administracion/listar-productos">Productos</a></li>
+        <li *ngIf="seInicioSesion"><a routerLink="/administracion/register-usuario">register</a></li>
+        <li *ngIf="seInicioSesion"><a routerLink="/seguridad/cambioClave">Cambiar Clave</a></li>
+        <li *ngIf="seInicioSesion"><a routerLink="/seguridad/cerrarSesion">Cerrar Sesión</a></li>
+        <li *ngIf="!seInicioSesion"><a routerLink="/seguridad/identificar">Iniciar Sesión</a></li>
       </ul>
     </div>
   </nav>
 
   <ul class="sidenav" id="mobile-demo">
-    <li><a routerLink="/administracion/usuarios">Usuarios</a></li>
-        <li><a routerLink="/administracion/productos">Productos</a></li>
-        <li><a routerLink="/seguridad/cambioClave">Cambiar Clave</a></li>
-        <li><a routerLink="/seguridad/identificar"> Inicar Sesion</a></li>
+        <li *ngIf="seInicioSesion"><a routerLink="/administracion/usuarios">Usuarios</a></li>
+        <li *ngIf="seInicioSesion"><a routerLink="/administracion/listar-productos">Productos</a></li>
+        <li *ngIf="seInicioSesion"><a routerLink="/seguridad/cambioClave">Cambiar Clave</a></li>
+        <li *ngIf="seInicioSesion"><a routerLink="/seguridad/cerrarSesion">Cerrar Sesión</a></li>
+        <li *ngIf="!seInicioSesion"><a routerLink="/seguridad/identificar">Iniciar Sesión</a></li>
   </ul>
+  
+        
