--- a/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/plantilla/barra-navegacion/barra-navegacion.component.html
@@ -6,6 +6,7 @@
         <li *ngIf="seInicioSesion"><a routerLink="/administracion/usuarios">Usuarios</a></li>
         <li *ngIf="seInicioSesion"><a routerLink="/administracion/listar-productos">Productos</a></li>
         <li *ngIf="seInicioSesion"><a routerLink="/administracion/register-usuario">register</a></li>
+        <li *ngIf="seInicioSesion"><a routerLink="/pedidos/buscar-pedido">Pedidos</a></li>
         <li *ngIf="seInicioSesion"><a routerLink="/seguridad/cambioClave">Cambiar Clave</a></li>
         <li *ngIf="seInicioSesion"><a routerLink="/seguridad/cerrarSesion">Cerrar Sesión</a></li>
         <li *ngIf="!seInicioSesion"><a routerLink="/seguridad/identificar">Iniciar Sesión</a></li>
@@ -20,5 +21,4 @@
         <li *ngIf="seInicioSesion"><a routerLink="/seguridad/cerrarSesion">Cerrar Sesión</a></li>
         <li *ngIf="!seInicioSesion"><a routerLink="/seguridad/identificar">Iniciar Sesión</a></li>
   </ul>
-  
-        
+
