--- a/src/app/modulos/administracion/productos/buscar-producto/buscar-producto.component.html
+++ b/src/app/modulos/administracion/productos/buscar-producto/buscar-producto.component.html
@@ -1,5 +1,8 @@
 <a routerLink="/administracion/crear-producto" class="btn">Nuevo Producto</a>
 
+
+
+
 <table class="table responsive">
     <thead>
         <tr>
@@ -42,7 +45,9 @@
             </td>
             <td>
                 <a routerLink="/administracion/editar-producto/{{p.id}}" class="btn">Editar Producto</a>
+                <a routerLink=" /administracion//eliminar-producto/{{p.id}}" class="btn" >Eliminar producto</a>
             </td>
+            
         </tr>
     </tbody>
 </table>
