--- a/src/app/modulos/administracion/productos/crear-producto/crear-producto.component.html
+++ b/src/app/modulos/administracion/productos/crear-producto/crear-producto.component.html
@@ -1,3 +1,4 @@
+<a routerLink="/administracion/editar-producto" class="btn">Editar Producto</a>
 <div class="row">
     <h3 class="center-align">Crear Productos</h3>
     <article class="col s6 offset-s3">
