--- a/src/app/plantilla/pie-pagina/pie-pagina.component.html
+++ b/src/app/plantilla/pie-pagina/pie-pagina.component.html
@@ -1,25 +1,52 @@
 <footer class="page-footer blue-grey">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text">Quines somos</h5>
+        <p class="grey-text text-lighten-4">Esta es una Plataforma Online dedicada a la venta articulos y productos
+          caninos.</p>
+        <nav>
+          <h2>seguinos!</h2>
+          <div class="nav-wrapper blue-grey">
+            
+            <a href="https://www.facebook.com/"><img src="assets/imagenes/logo_facebook.png" height="50"></a>
+            <a href="https://www.twitter.com/"><img src="assets/imagenes/logo_twitter.png" height="50"></a>
+            <a href="https://www.instagram.com/"><img src="assets/imagenes/logo_instagram.png" height="45"></a>
+            <a href="https://www.whatsapp.com/"><img src="assets/imagenes/logo_whatsapp.png" height="54"></a>
+
+          </div>
+
+
+        </nav>
+      </div>
+      <div class="col l4 offset-l2 s12">
+
+        <ul>
+          <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+              <div class="col-md-4 ">
+                <img src="assets/imagenes/4.png" class="img-fluid rounded-start">
+                <img src="assets/imagenes/12.jpeg" class="img-fluid rounded-start" width="2000px" height="5000px">
+
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <img src="assets/imagenes/3.jpg" class="img-fluid rounded-start">
+                  <p class="card-text"><small class="text-muted">Somos una Empresa altamente calificada, ofrecemos
+                      servicios las 24 horas del dia</small></p>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
     <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Quines somos</h5>
-          <p class="grey-text text-lighten-4">Esta es una Plataforma Online dedicada a la venta articulos y productos caninos.</p>
-        </div>
-        <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-      </div>
+      © Elaborado por grupo TeamNodejs_Mision TIC 2022 Copyright
+
     </div>
-    <div class="footer-copyright">
-      <div class="container">
-      © Elaborado por grupo TeamNodejs_Mision TIC 2022 Copyright 
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-      </div>
-    </div>
-  </footer>
+  </div>
+</footer>
