--- a/src/app/modulos/administracion/productos/editar-producto/editar-producto.component.html
+++ b/src/app/modulos/administracion/productos/editar-producto/editar-producto.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <h3 class="center-align">Crear Productos</h3>
+    <h3 class="center-align">editar Productos</h3>
     <article class="col s6 offset-s3">
         <form [formGroup]="fgValidador" (ngSubmit)="EditarProducto()" method="POST" action="formulario-contacto.php">
             <input type="hidden" formControlName="id/">
