--- a/src/app/modulos/administracion/productos/eliminar-producto/eliminar-producto.component.html
+++ b/src/app/modulos/administracion/productos/eliminar-producto/eliminar-producto.component.html
@@ -1,1 +1,40 @@
-<p>eliminar-producto works!</p>
+
+
+<div class="row">
+    <h3 class="center-align">Crear Productos</h3>
+    <article class="col s6 offset-s3">
+        <form [formGroup]="fgValidador" (ngSubmit)="EliminarProducto()" method="POST" action="formulario-contacto.php">
+            <input type="hidden" formControlName="id/">
+            <div class="input-field">
+                <label for="nombre" class="active">Nombre</label>
+                <input formControlName="nombre" type="text" name="nombre" required>
+            </div>
+            <div class="input-field">
+                <label for="descripcion" class="active">Descripcion</label>
+                <input formControlName="descripcion" type="text" name="descripcion" required>
+            </div>
+
+            <div class="input-field">
+                <label for="precioVenta" class="active">precioVenta</label>
+                <input formControlName="precioVenta" type="text" name="precioVenta" required>
+            </div>
+            <div class="input-field">
+                <label for="stock" class="active">stock</label>
+                <input formControlName="stock" type="text" name="stock" required>
+            </div>
+
+            <div class="input-field">
+                <label for="imagen" class="active">Imagen</label>
+                <input formControlName="imagen" type="text" name="imagen" required>
+            </div>
+
+            <p class="center-align">
+                <button [disabled]="!fgValidador.valid" class="waves-effect waves-light btn" type="submit"><i
+                        class="material-icons right">send</i>Enviar</button>
+            </p>
+
+        </form>
+
+    </article>
+</div>
+
