--- a/src/app/plantilla/inicio/inicio.component.html
+++ b/src/app/plantilla/inicio/inicio.component.html
@@ -1,1 +1,68 @@
-<h3>Bienvenidos al Sistema Tienda Virtual Mascota Feliz</h3>
+
+<div class="flexslider ">
+    <ul class="slides">
+        <li>
+            <img src="assets/imagenes/7.jpeg" alt="">
+            <section class="flex-caption">
+               
+            </section>
+        </li>
+        <li>
+            <img src="assets/imagenes/5.jpg" alt="">
+            <section class="flex-caption">
+                <p>Bienvenidos a la tienda de productos para mascotas</p>
+            </section>
+        </li>
+        <li>
+            <img src="assets/imagenes/22.png" alt="">
+            <section class="flex-caption">
+              
+            </section>
+        </li>
+    </ul>
+</div>
+<!--
+<section id="boletin">
+    <div class="contenedor">
+      <h1>Subscríbete a nuestra Plataforma </h1>
+
+      <form>
+        <input type="email" placeholder="Ingrese el Email...">
+        <button type="submit" class="boton1">Subscríbete</button>
+        
+      </form>
+      
+    </div>
+  </section>
+  <h3>&.com</h3>
+
+-->
+<nav>
+    <div class="nav-wrapper blue-grey">
+    
+      
+      <ul class="right hide-on-med-and-down">
+        
+      </ul>
+    </div>
+  </nav>
+
+<section>
+    <div class="row">
+        <form class="col s12">
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="email" type="email" class="validate">
+              <label for="email">Email</label>
+              <span class="helper-text" data-error="wrong" data-success="right">Helper text</span>  <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                <i class="material-icons right">send</i>
+              </button>
+
+            </div>
+          </div>
+        </form>
+      </div>
+      
+</section>
+
+  
