--- a/src/app/modulos/seguridad/cambio-clave/cambio-clave.component.html
+++ b/src/app/modulos/seguridad/cambio-clave/cambio-clave.component.html
@@ -1,1 +1,47 @@
-<p>cambio-clave works!</p>
+<div class="row">
+    <div class="col s12 l4 offset-l4">
+      <div class="card grey lighten-3">
+        <div class="card-content">
+          <h4 class="card-title center-align">Identificación de Usuarios</h4>
+          <form [formGroup]="fgValidador" (ngSubmit)="IdentificarUsuario()">
+            <!--<div class="row">
+              <div class="input-field col s12">
+                <i class="material-icons prefix">email</i>
+                <input formControlName="usuario" type="email" id="email" class="validate" />
+                <label for="email">Usuario</label>
+              </div>
+            </div>-->
+            <div class="row">
+              <div class="input-field col s12">
+                <i class="material-icons prefix">vpn_key</i>
+                <input formControlName="clave-anterior" type="password" id="password" class="validate" />
+                <label for="clave">Contraseña anterior</label>
+              </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                  <i class="material-icons prefix">vpn_key</i>
+                  <input formControlName="clave-nueva-1" type="password" id="password" class="validate" />
+                  <label for="clave">Contraseña nueva</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <i class="material-icons prefix">vpn_key</i>
+                  <input formControlName="clave-nueva-2" type="password" id="password" class="validate" />
+                  <label for="clave">Repetir contraseña nueva</label>
+                </div>
+              </div>
+            <div class="row center-align">
+              <button [disabled]="!fgValidador.valid" class="btn waves-effect waves-light" type="submit" name="action">Ingresar
+                <i class="material-icons right">send</i>
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br />
+  <br />
+  
